--- a/index.html
+++ b/index.html
@@ -76,20 +76,27 @@
     </div>
 </div>
 
-    <footer class="footer bg-dark text-white">
-    <div class="container py-5">
-        <div class="row justify-content-center">
-            <div class="col-md-4 text-center">
+<footer class="footer bg-dark text-white">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-6 text-center">
                 <h5>Github</h5>
-                    <p><a href="https://github.com/pedrofeld" target="_blank">https://github.com/pedrofeld</a></p>
-                    <p><a href="https://github.com/OliveiraYan1" target="_blank">https://github.com/OliveiraYan1</a></p>
-                    <p><a href="https://github.com/Baabie" target="_blank">https://github.com/Baabie</a></p>
-                    <p><a href="https://github.com/ThiagoFranca4180" target="_blank">https://github.com/ThiagoFranca4180</a></p>
+                <p><a href="https://github.com/pedrofeld" target="_blank">https://github.com/pedrofeld</a></p>
+                <p><a href="https://github.com/OliveiraYan1" target="_blank">https://github.com/OliveiraYan1</a></p>
+                <p><a href="https://github.com/Baabie" target="_blank">https://github.com/Baabie</a></p>
+                <p><a href="https://github.com/ThiagoFranca4180" target="_blank">https://github.com/ThiagoFranca4180</a></p>
             </div>
-
+            <div class="col-md-6 text-center">
+                <h5>Linkedin</h5>
+                <p><a href="https://www.linkedin.com/in/pedro-feld/?original_referer=https%3A%2F%2Fwww%2Elinkedin%2Ecom%2F&originalSubdomain=br" target="_blank">Pedro Feld</a></p>
+                <p><a href="https://www.linkedin.com/in/yan-oliveira-dev/" target="_blank">Yan Alecrim Borges de Oliveira</a></p>
+                <p><a href="https://www.linkedin.com/in/pamella-namie-4407b9222/" target="_blank">Pamella Namie Nomura</a></p>
+                <p><a href="https://www.linkedin.com/in/thiagofranca4180/" target="_blank">Thiago França</a></p>
+            </div>
         </div>
     </div>
 </footer>
+
 
     <script src="./carrosel.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
